--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="cabeza">
         <h1>Mi Pokeportafolio</h1>
     </header>
-    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a style="color: white" class="navbar-brand" href="#">Sobre mí</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
